--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -91,17 +91,17 @@
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.area, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.area, new SelectList(ViewData["jsonDataAreas"] as List<string>), "Seleccione un área...", new { @class = "form-control", id = "areaDropdown" })
+                            @Html.DropDownListFor(participanteModel => participanteModel.area, webMetics.Controllers.ParticipanteController.GetAreas(), "Seleccione un Área...", new { @class = "form-control", id = "areaDropdown" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.area, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.departamento, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.departamento, new SelectList(Enumerable.Empty<SelectListItem>()), this.Model.departamento, new { @class = "form-control", id = "departamentoDropdown" })
+                            @Html.DropDownListFor(participanteModel => participanteModel.departamento, webMetics.Controllers.ParticipanteController.GetDepartamento(this.Model.area), "Seleccione una Facultad o Sistema...", new { @class = "form-control", id = "departamentoDropdown" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.departamento, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.unidadAcademica, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.unidadAcademica, new SelectList(Enumerable.Empty<SelectListItem>()), this.Model.unidadAcademica, new { @class = "form-control", id = "seccionDropdown" })
+                            @Html.DropDownListFor(participanteModel => participanteModel.unidadAcademica, webMetics.Controllers.ParticipanteController.GetUnidades(this.Model.departamento), "Seleccione una Unidad Académica...", new { @class = "form-control", id = "seccionDropdown" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.unidadAcademica, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
@@ -145,115 +145,86 @@ else
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
 
-        // Handle change event of area dropdown
-        $('#areaDropdown').click(function () {
-            var areaName = $(this).val();
 
-            // Clear departamento and unidadAcademica dropdowns
-            $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
-            $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
+<script>
+    // Handle change event of area dropdown
+    $('#areaDropdown').click(function () {
+        // Clear departamento and unidadAcademica dropdowns
+        $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
+        $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
 
-            if (areaName !== '') {
-                // Make AJAX request to fetch departamentos for selected area
-                $.ajax({
-                    url: '/Participante/GetDepartamentosByArea',
-                    type: 'GET',
-                    data: { areaName: areaName },
-                    dataType: 'json',
-                    success: function (data) {
-                        // Update departamento dropdown with fetched data
-                        $.each(data, function (index, value) {
-                            $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle error
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: 'An error occurred while fetching departamentos: ' + error
-                        });
-                    }
+        $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
+        $.ajax({
+            url: '/Participante/GetDepartamentosByArea',
+            type: 'GET',
+            data: { areaName: areaName },
+            dataType: 'json',
+            success: function (data) {
+                // Update departamento dropdown with fetched data
+                $.each(data, function (index, value) {
+                    $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
                 });
-                // Make AJAX request to fetch secciones for selected departamento
-                $.ajax({
-                    url: '/Participante/GetSeccionesByDepartamento',
-                    type: 'GET',
-                    data: { departamentoName: departamentoName },
-                    dataType: 'json',
-                    success: function (data) {
-                        // Update unidadAcademica dropdown with fetched data
-                        $.each(data, function (index, value) {
-                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle error
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: 'An error occurred while fetching secciones: ' + error
-                        });
-                    }
-                });
-            }
-        });
-
-        // Handle change event of departamento dropdown
-        $('#departamentoDropdown').click(function () {
-            var departamentoName = $(this).val();
-            var areaName = $('#areaDropdown').val();
-
-            $.ajax({
-                url: '/Participante/GetDepartamentosByArea',
-                type: 'GET',
-                data: { areaName: areaName },
-                dataType: 'json',
-                success: function (data) {
-                    // Update departamento dropdown with fetched data
-                    $.each(data, function (index, value) {
-                        $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
-                    });
-                },
-                error: function (xhr, status, error) {
-                    // Handle error
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'An error occurred while fetching departamentos: ' + error
-                    });
-                }
-            });
-
-            // Clear unidadAcademica dropdown
-            $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
-
-            if (departamentoName !== '') {
-                // Make AJAX request to fetch secciones for selected departamento
-                $.ajax({
-                    url: '/Participante/GetSeccionesByDepartamento',
-                    type: 'GET',
-                    data: { areaName: areaName, departamentoName: departamentoName },
-                    dataType: 'json',
-                    success: function (data) {
-                        // Update unidadAcademica dropdown with fetched data
-                        $.each(data, function (index, value) {
-                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                        });
-                    },
-                    error: function (xhr, status, error) {
-                        // Handle error
-                        Swal.fire({
-                            icon: 'error',
-                            title: 'Error',
-                            text: 'An error occurred while fetching secciones: ' + error
-                        });
-                    }
+            },
+            error: function (xhr, status, error) {
+                // Handle error
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'An error occurred while fetching departamentos: ' + error
                 });
             }
         });
     });
+</script>
+
+<script>
+
+    // Handle change event of departamento dropdown
+    $('#departamentoDropdown').click(function () {
+        var areaName = $('#areaDropdown').val();
+        $.ajax({
+            url: '/Participante/GetDepartamentosByArea',
+            type: 'GET',
+            data: { areaName: areaName },
+            dataType: 'json',
+            success: function (data) {
+                // Update departamento dropdown with fetched data
+                $.each(data, function (index, value) {
+                    $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
+                });
+            },
+            error: function (xhr, status, error) {
+                // Handle error
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'An error occurred while fetching departamentos: ' + error
+                });
+            }
+        });
+        $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
+        var departamentoName = $('#departamentoDropdown').val();
+
+        $.ajax({
+            url: '/Participante/GetSeccionesByDepartamento',
+            type: 'GET',
+            data: { areaName: areaName, departamentoName: departamentoName },
+            dataType: 'json',
+            success: function (data) {
+                // Update departamento dropdown with fetched data
+                $.each(data, function (index, value) {
+                    $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                });
+            },
+            error: function (xhr, status, error) {
+                // Handle error
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'An error occurred while fetching departamentos: ' + error
+                });
+            }
+        });
+     });
 </script>
