--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
 <body>
     <div class="logos_wrapper" style="background-color: #44beef ">
         <a href="https://www.ucr.ac.cr/"> <img src="~/images/logoUCR.png" style="width: 10%; margin-right: 1%;" alt="Logo Universidad de Costa Rica" /> </a>
-        <a href="https://metics.ucr.ac.cr/es/"> <img src="~/images/logoMETICS.png" style="width: 15%; margin-right: 1%;" alt="Logo METICS" /> </a>
-        <a href="https://metics.ucr.ac.cr/es/"> <img src="~/images/logosVC.png" style="width: 8%; margin-right: 1%;" alt="Logo Vicerrectoria de Docencia" /> </a>
+        <a href="https://metics.ucr.ac.cr/"> <img src="~/images/logoMETICS.png" style="width: 15%; margin-right: 1%;" alt="Logo METICS" /> </a>
+        <a href="https://vd.ucr.ac.cr/"> <img src="~/images/logosVC.png" style="width: 8%; margin-right: 1%;" alt="Logo Vicerrectoria de Docencia" /> </a>
     </div>
 
     @if (ViewBag.Id != "" && ViewBag.Title != "Formulario de Registro" && ViewBag.Title != "Iniciar sesión")
@@ -58,7 +58,6 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administrador</a>
                                 <div class="dropdown-menu">
-                                    @* @Html.ActionLink("Tipos de actividad", "ListaTiposActividad", "TipoActividad", new { }, new { @class = "dropdown-item" }) *@
                                     @Html.ActionLink("Categorías", "ListaCategorias", "Categoria", new { }, new { @class = "dropdown-item" })
                                     @Html.ActionLink("Áreas de competencia", "ListaTemas", "Tema", new { }, new { @class = "dropdown-item" })
                                     @Html.ActionLink("Lista de asesores", "ListaAsesores", "Asesor", new { }, new { @class = "dropdown-item" })
@@ -104,7 +103,7 @@
                         <h5 class="text-uppercase" style="color: #CED4DA">Ubicación</h5>
 
                         <p>
-                            De la Rotonda de la Hispanidad 100 metros al este, 100 metros al norte y 100 metros al este. Antiguos apartamentos Pachecho Dominguez, San Pedro de Montes de Oca.
+                            De la Rotonda de la Hispanidad 100 metros al Este, 100 metros al Norte y 100 metros al Este. Antiguos apartamentos Pachecho Dominguez, San Pedro de Montes de Oca.
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -112,7 +111,7 @@
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="https://metics.ucr.ac.cr/es/mediacion-virtual" class="text-white">Mediacion Virtual</a>
+                                <a href="https://metics.ucr.ac.cr/es/mediacion-virtual" class="text-white">Mediación Virtual</a>
                             </li>
                             <li>
                                 <a href="https://sibdi.ucr.ac.cr" class="text-white">SIBDI</a>
